--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
   <div class="flipbook">
-    <div class="hard">Warta Jemaat <small>GKI Griya Merpati Mas</small></div>
+    <div>
+      <img src="images/cover1.webp" alt="" /></div>
     <div class="hard"></div>
     <div>
-      <small>WARTA JEMAAT GKI GMM EDISI 18 Tahun ke-22❤️</small>
-      <small>Minggu, 18-Januari-2026</small>
+      <img src="images/cover2.webp" alt="" />
     </div>
     <div>
       <img src="images/page1.webp" alt="" />
