--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div><img src="images/page12.webp" alt="" /></div>
       
       <div class="hard"><img src="images/back2.webp" alt="" /></div>
+      <div class="hard"><img src="images/cover2.webp" alt="" /></div>
     </div>
   </div>
 
