--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="book-container">
         
-        <img src="images/shadow.png" class="custom-shadow" alt="Book Shadow">
+        <img src="images/front_page_edge_shading.webp" class="custom-shadow" alt="Book Shadow">
 
         <div class="flipbook">
           <div class="hard"><img src="images/cover1.webp" alt="" /></div>
