--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           <div class="hard"><img src="images/cover2.webp" alt="" /></div>
         </div>
         <div class="shadow-wrapper">
-            <img src="images/cover_page_edge_shading.webp" class="shadow-item shadow-front active" alt="Front Shadow">
+            <img src="images/front_page_edge_shading.webp" class="shadow-item shadow-front active" alt="Front Shadow">
+            <img src="images/flip_book_edge_shading.webp" class="shadow-item shadow-flip" alt="Flip Shadow">
+            <img src="images/back_page_edge_shading.webp" class="shadow-item shadow-back" alt="Back Shadow">
         </div>
     </div>
   </div>
