--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 var scaleX = (width - 60) / baseWidth;   
                 var scaleY = (height - 60) / baseHeight; 
-                var scale = Math.min(scaleX, scaleY);
+                var scale = parseFloat(Math.min(scaleX, scaleY).toFixed(2));
 
                 if (scale > 1.2) scale = 1.2;
 
