--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         <div class="hard inside-cover"><img src="images/coverin1.webp" alt="" /></div>
 
         <!-- Halaman Isi -->
-        <div><img src="images/page1.webp" alt="" /></div>
-        <div><img src="images/page2.webp" alt="" /></div>
-        <div><img src="images/page3.webp" alt="" /></div>
-        <div><img src="images/page4.webp" alt="" /></div>
-        <div><img src="images/page5.webp" alt="" /></div>
-        <div><img src="images/page6.webp" alt="" /></div>
-        <div><img src="images/page7.webp" alt="" /></div>
-        <div><img src="images/page8.webp" alt="" /></div>
-        <div><img src="images/page9.webp" alt="" /></div>
-        <div><img src="images/page10.webp" alt="" /></div>
-        <div><img src="images/page11.webp" alt="" /></div>
-        <div><img src="images/page12.webp" alt="" /></div>
+        <div><img src="images/page1.png" alt="" /></div>
+        <div><img src="images/page2.png" alt="" /></div>
+        <div><img src="images/page3.png" alt="" /></div>
+        <div><img src="images/page4.png" alt="" /></div>
+        <div><img src="images/page5.png" alt="" /></div>
+        <div><img src="images/page6.png" alt="" /></div>
+        <div><img src="images/page7.png" alt="" /></div>
+        <div><img src="images/page8.png" alt="" /></div>
+        <div><img src="images/page9.png" alt="" /></div>
+        <div><img src="images/page10.png" alt="" /></div>
+        <div><img src="images/page11.png" alt="" /></div>
+        <div><img src="images/page12.png" alt="" /></div>
 
         <!-- Cover Dalam Belakang (Akan dihapus di Mobile) -->
         <div class="hard inside-cover"><img src="images/coverin2.webp" alt="" /></div>
