--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="book-container">
       <div class="flipbook">
         <!-- Cover Depan -->
-        <div class="hard"><img src="images/cover1.webp" alt="" /></div>
+        <div class="hard"><img src="images/cover1.svg" alt="" /></div>
 
         <!-- Cover Dalam Depan (Akan dihapus di Mobile) -->
-        <div class="hard inside-cover"><img src="images/coverin1.webp" alt="" /></div>
+        <div class="hard inside-cover"><img src="images/Coverin1.svg" alt="" /></div>
 
         <!-- Halaman Isi -->
         <div><img src="images/page1.svg" alt="" /></div>
@@ -44,10 +44,10 @@
         <div><img src="images/page12.svg" alt="" /></div>
 
         <!-- Cover Dalam Belakang (Akan dihapus di Mobile) -->
-        <div class="hard inside-cover"><img src="images/coverin2.webp" alt="" /></div>
+        <div class="hard inside-cover"><img src="images/Coverin2.svg" alt="" /></div>
 
         <!-- Cover Belakang -->
-        <div class="hard"><img src="images/cover2.webp" alt="" /></div>
+        <div class="hard"><img src="images/cover2.svg" alt="" /></div>
       </div>
     </div>
   </div>
