--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
 
                 <!-- Cover Belakang -->
                 <div class="hard"><img src="images/cover2.svg" alt="" /></div>
+            </div>
+        </div>
+        <div class="controls">
+            <button class="btn" id="prevBtn"><i class="fa-solid fa-chevron-left"></i></button>
 
-                <div class="controls">
-                    <button class="btn" id="prevBtn"><i class="fa-solid fa-chevron-left"></i></button>
-                    <button class="btn" id="zoomOut"><i class="fa-solid fa-minus"></i></button>
-                    <button class="btn" id="zoomIn"><i class="fa-solid fa-plus"></i></button>
-                    <button class="btn" id="nextBtn"><i class="fa-solid fa-chevron-right"></i></button>
-                </div>
+            <div style="display: flex; gap: 10px;">
+                <button class="btn" id="zoomOut"><i class="fa-solid fa-minus"></i></button>
+                <button class="btn" id="zoomIn"><i class="fa-solid fa-plus"></i></button>
             </div>
 
+            <button class="btn" id="nextBtn"><i class="fa-solid fa-chevron-right"></i></button>
         </div>
     </div>
 
