--- a/index.html
+++ b/index.html
@@ -50,15 +50,36 @@
                 <div class="hard"><img src="images/cover2.svg" alt="" /></div>
             </div>
         </div>
-        <div class="controls">
-            <button class="btn" id="prevBtn"><i class="fa-solid fa-chevron-left"></i></button>
+        <div class="toolbar-container">
 
-            <div style="display: flex; gap: 10px;">
-                <button class="btn" id="zoomOut"><i class="fa-solid fa-minus"></i></button>
-                <button class="btn" id="zoomIn"><i class="fa-solid fa-plus"></i></button>
+            <div id="popupMenu" class="popup-menu">
+                <button class="menu-item"><i class="fa-solid fa-file"></i> Single Page Mode</button>
+                <button class="menu-item" id="firstPageBtn"><i class="fa-solid fa-backward-step"></i> Goto First
+                    Page</button>
+                <button class="menu-item" id="lastPageBtn"><i class="fa-solid fa-forward-step"></i> Goto Last
+                    Page</button>
+                <button class="menu-item" id="toggleSoundMenu"><i class="fa-solid fa-volume-high"
+                        id="soundIconMenu"></i> Turn on/off Sound</button>
             </div>
 
-            <button class="btn" id="nextBtn"><i class="fa-solid fa-chevron-right"></i></button>
+            <div class="toolbar">
+                <button class="btn" title="Thumbnails"><i class="fa-solid fa-table-cells"></i></button>
+                <div class="page-indicator">1 / 12</div>
+
+                <div class="separator"></div>
+
+                <button class="btn" id="zoomOut" title="Zoom Out"><i class="fa-solid fa-minus"></i></button>
+                <button class="btn" id="zoomIn" title="Zoom In"><i class="fa-solid fa-plus"></i></button>
+
+                <div class="separator"></div>
+
+                <button class="btn" id="fullscreenBtn" title="Fullscreen"><i class="fa-solid fa-expand"></i></button>
+                <button class="btn" title="Download"><i class="fa-solid fa-download"></i></button>
+                <button class="btn" title="Print"><i class="fa-solid fa-print"></i></button>
+                <button class="btn active" id="menuBtn" title="More Options"><i
+                        class="fa-solid fa-ellipsis"></i></button>
+            </div>
+
         </div>
     </div>
 
@@ -250,6 +271,51 @@
             });
 
         });
+        // ... kode inisialisasi lainnya ...
+
+        // --- LOGIKA TOOLBAR BARU ---
+
+        // Toggle Popup Menu
+        $("#menuBtn").click(function (e) {
+            e.stopPropagation(); // Mencegah event klik menutup menu seketika
+            $("#popupMenu").toggleClass("show");
+            $(this).toggleClass("active");
+        });
+
+        // Tutup menu jika klik di luar area menu
+        $(document).click(function () {
+            $("#popupMenu").removeClass("show");
+            $("#menuBtn").removeClass("active");
+        });
+
+        // Mencegah penutupan saat mengklik di dalam menu itu sendiri
+        $("#popupMenu").click(function (e) {
+            e.stopPropagation();
+        });
+
+        // Tombol di dalam menu (Contoh fungsi)
+        $("#firstPageBtn").click(function () {
+            flipbook.turn("page", 1);
+            $("#popupMenu").removeClass("show");
+        });
+        $("#lastPageBtn").click(function () {
+            flipbook.turn("page", flipbook.turn("pages"));
+            $("#popupMenu").removeClass("show");
+        });
+        // Anda bisa memindahkan logika toggle sound ke tombol baru ini
+
+        // Update Indikator Halaman secara Dinamis
+        flipbook.bind("turning", function (event, page, view) {
+            var totalPages = flipbook.turn("pages");
+            // Menampilkan rentang halaman untuk tampilan ganda (misal: 2-3 / 12)
+            var currentPageString = view.join("-").replace(/^0-|-0$/g, '');
+            if (view[0] === 0 || view[1] === 0) {
+                currentPageString = page; // Untuk halaman pertama/terakhir
+            }
+            $(".page-indicator").text(currentPageString + " / " + totalPages);
+        });
+
+        // ... sisa kode JS Anda (zoom, dll) ...
     </script>
 </body>
 
